# zephyr-driver-base

./: CMakeLists.txt  Kconfig  README.md
include/: sensirion_common.h  sensirion_i2c.h
src/: crc_tables.c  sensirion_common.c  sensirion_i2c.c
tests/: CMakeLists.txt  test_common.cpp  test_i2c.cpp
tests/shims/zephyr/drivers/: i2c.h
unit_testing/: .gitignore  CHANGELOG.md  setup.cfg  setup.py
unit_testing/driver_tester/: common.py  i2c.py
unit_testing/swig/: sensirion_common.i  test_sensirion_common.c  test_sensirion_i2c.c  test_sensirion_i2c.h
unit_testing/tests/: conftest.py  test_sensirion_common.py
zephyr/: module.yml
